--- a/www/css/style.css
+++ b/www/css/style.css
@@ -246,6 +246,7 @@
 }
 .profile_white_above ul li div {
     position: absolute;
+    margin-top: 3px;
 }
 .profile_white_above ul li div img {
     height: 15px;
@@ -261,6 +262,9 @@
 .profile_white_above ul li span.gray {
     color:#CCC;
     font-size: 12px;
+}
+.profile_white_above ul li a span {
+    color: #000;
 }
 
 .rdv_list {
@@ -322,7 +326,7 @@
 .above_list_optk ul {
     text-align: left;
 }
-.above_list_optk ul li .item-title {
+.above_list_optk.on_list ul li .item-title {
     text-transform: uppercase;
 }
 .above_list_optk ul li .item-subtitle {
@@ -393,13 +397,13 @@
     text-transform: uppercase;
     font-size: 14px;
     margin-bottom: 10px;
-}
+}/*
 .opticien_blue_area .contr table {
     
 }
 .opticien_blue_area .contr table tr {
     
-}
+}*/
 .opticien_blue_area .contr table tr td {
     font-size:10px;
 }
@@ -507,4 +511,8 @@
 }
 .opticien_gray_area ul li img {
     width: 100%;
+}
+
+.above_list_optk input {
+    text-transform: none !important;
 }
