--- a/www/css/style.css
+++ b/www/css/style.css
@@ -597,7 +597,7 @@
 }
 
 .opt_info_resistance {
-    background-color: #CCC;
+    background-color: #cccccc40;
     border-radius: 60px;
     margin-top:20px;
     color: #1459AC;
