--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,41 +1,58 @@
+@font-face {
+    font-family: "Comfortaa Regular";
+    src: url("../fonts/Comfortaa-Regular.ttf");
+}
+@font-face {
+    font-family: "Comfortaa Light";
+    src: url("../fonts/Comfortaa-Light.ttf");
+}
+@font-face {
+    font-family: "Comfortaa Bold";
+    src: url("../fonts/Comfortaa-Bold.ttf");
+}
+
+body {
+    font-family: 'Comfortaa Regular';
+}
+
 .toto {
     position:absolute;
     padding: 20px;
     color: #FFF;
     font-size: 20px;
-  }
+}
   .toto span {
     display: block;
     font-size: 11px;
     margin-top: 10px;
-  }
-  .vision {
+}
+.vision {
     padding: 20px;
     text-transform: uppercase;
     text-align: center;
     font-size: 12px;
-  }
-  .loim ul {
+}
+.loim ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     text-align: center;
-  }
-  .loim ul li {
+}
+.loim ul li {
     display: inline-block;
     width: 50%;
     text-align: center;
-  }
-  .loim ul li div {
+}
+.loim ul li div {
     width:80%;
     border: solid 1px #000;
     margin:0 auto;
     border-radius: 3px;
     padding: 20px 0;
-  }
-  .loim ul li div img {
+}
+.loim ul li div img {
     width:90%
-  }
+}
 
 .bluebloc {
     margin:10px 25px 12px 25px;
@@ -702,4 +719,12 @@
     padding-top:60px;
     font-size: 11px;
     text-align: center;
+}
+
+.parameter-security {
+    background-color: #F2F2F2;
+}
+.parameter-security .list.simple-list ul li {
+    padding: 0; 
+    font-size: 12px;
 }
