--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1521,3 +1521,60 @@ ul.list_of_motifs li.clickcollect {
     font-size: 20px;
 }
 
+ul.essayage_list {
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+}
+ul.essayage_list li {
+    width: 33.33vw;
+    display: inline-block;
+    margin-left: -5px;
+    padding: 5px;
+}
+ul.essayage_list li:nth-child(3n + 1) {
+    margin-left: 0px;
+}
+ul.essayage_list li > div {
+    border: solid 1px #EEE;
+    background-size: cover;
+    border-radius: 15px;
+}
+ul.essayage_list li > div > div {
+    text-align: center;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    color: #FFF;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+.zoomed_in {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    background-color: #000;
+    z-index: 99999;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+}
+.zoomed_in .close {
+    padding: 5px 10px;
+    color: #FFF;
+    border: solid 1px #FFF;
+    border-radius: 5px;
+    width: fit-content;
+    margin: 10px;
+    text-shadow: 1px 2px black;
+    cursor: pointer;
+}
+.zoomed_in .delete {
+    padding: 10px 10px;
+    color: #FFF;
+    cursor: pointer;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: #F00;
+}
