--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1663,15 +1663,17 @@ ul.essayage_list li > div > div {
     cursor: pointer;
 }
 .zone_casse ul li.active > div {
-    border: solid 1px rgb(14, 109, 89);
+    /*border: solid 1px rgb(14, 109, 89);*/
+    background-color: #CDEDEA;
 }
 .zone_casse ul li > div img {
-    width:100%;
+    width:92%;
 }
 
 .join_pic {
     color: #1A2A84;
     margin-top: 10px;
+    cursor: pointer;
 }
 .join_pic i {
     font-size: 16px;
@@ -1687,7 +1689,28 @@ ul.essayage_list li > div > div {
     cursor: pointer;
     margin-top: 5px;
     background-color: #EEE;
+    overflow: hidden;
 }
 
+.disabled button.button {
+    background-color: #CCC;
+    color: #555;
+}
 
+.hider {
+    position: absolute;
+    top: calc(var(--f7-navbar-height) + var(--f7-safe-area-top));
+    width: 100%;
+    height: calc(100vh - (calc(var(--f7-navbar-height) + var(--f7-safe-area-top))));
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 8888;
+}
 
+.searchwidget {
+    display: none;
+    width:100%;
+    height: 35px;
+    margin-top: 16px;
+    border-radius: 35px;
+    background-color: var(--f7-theme-color);
+}
