--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1257,6 +1257,13 @@ ul.list_of_motifs li.clickcollect {
     border-radius: 0 0 40px 40px;
     min-height: 50px;
     padding:20px 15px 12px 15px;
+    width: calc(100% - 30px);
+}
+.vsg_graydv.bottom {
+    padding-top:50px; 
+    margin-top:-35px; 
+    position:absolute; 
+    z-index:-1;
 }
 
 .vsg_graydv.pic_area {
@@ -1266,8 +1273,8 @@ ul.list_of_motifs li.clickcollect {
     color:#FFF;
     line-height: 270px;
     text-align: center;
-    background-size: 100% auto;
-    background-repeat: no-repeat;
+    background-size: 100% auto !important;
+    background-repeat: no-repeat !important;
 }
 .vsg_graydv.pic_area a {
     color:#FFF;
@@ -1279,6 +1286,7 @@ ul.list_of_motifs li.clickcollect {
     text-align: center;
     letter-spacing: 1px;
     margin: 0 15px;
+    font-weight: 700;
 }
 .vsg_graydv .vsg_body1 {
     color: var(--f7-theme-color);
@@ -1764,3 +1772,41 @@ ul.essayage_list li > div > div {
 .pidica img {
     height: 30px !important;
 }
+
+
+.howitworks {
+    background-color:#2B6AC7; 
+    color:#FFF !important; 
+    padding-left:15px;
+    padding-right:15px;
+}
+.howitworks p {
+    color:#000;
+}
+.howitworks p.ins {
+    padding-left: 15px;
+}
+.howitworks .pm_title {
+    color:#000;
+    font-size:18px;
+    font-weight: bold;
+}
+
+.fab-center-bottom, 
+.fab-left-bottom, 
+.fab-right-bottom {
+    bottom: calc(var(--f7-fab-margin) + var(--f7-safe-area-bottom) + var(--f7-toolbar-height) + 30px);
+}
+
+.hidden {
+    display: none !important;
+}
+.shunpo {
+    display: none !important;
+}
+
+
+
+
+
+
