--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2057,7 +2057,13 @@ ul.essayage_list li > div > div {
     margin: 0 auto;
 }
 
-
+#profileimg {
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    z-index: 88888;
+    left: 100px;
+}
 
 
 
